# pdftourl

./: .env  app.py  database.py  mcq_generator.py  pdf_processor.py  pyproject.toml  quiz_database.db  quiz_manager.py  requirements.txt
